--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -18,15 +18,18 @@ jobs:
           echo telegram text: $telegram_text
 jobs:
   add_file:
-
+    name: add file
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
-      - run: echo "123" > ./file.txt
+      - name: add file 123
+        run: echo "123" > ./file.txt
 
-      - uses: EndBug/add-and-commit@v5
+      - name: add and commit
+        uses: EndBug/add-and-commit@v5
         with:
           message: "Add the very useful text file"
           add: "*.txt --force"
