--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -27,15 +27,24 @@ jobs:
 
       - name: add file 123
         run: echo "123" > ./file.txt
+        
+      - uses: actions/checkout@v2
+        run: |
+          date > generated.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push  
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: experimen
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_MESSAGE: "hello"
-          COMMIT_AUTHOR_NAME: "CS Fixer"
-          COMMIT_AUTHOR_EMAIL: "john.doe@example.com"
+  #    - uses: stefanzweifel/git-auto-commit-action@v4
+  #      with:
+  #        commit_message: experimen
+  #      env:
+  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #        COMMIT_MESSAGE: "hello"
+  #        COMMIT_AUTHOR_NAME: "CS Fixer"
+  #        COMMIT_AUTHOR_EMAIL: "john.doe@example.com"
  #     - name: add and commit
  #       uses: EndBug/add-and-commit@v5
  #       with:
