--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -27,7 +27,9 @@ jobs:
 
       - name: add file 123
         run: echo "123" > ./file.txt
-        
+     
+      - run: git --version
+      
       - uses: actions/checkout@v2
         run: |
           date > generated.txt
