--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -29,6 +29,9 @@ jobs:
           cd repo-folder
           git config --local user.email "test@github.com"
           git config --local user.name "GitHub Action test"
+          echo "12ggggg3" > ./file.txt
+          pwd
+          ls
           git add ./file.txt
           git commit -m "Add changes1"
           git status
@@ -45,7 +48,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: add file 123
-        run: echo "123" > ./file.txt
+        run: echo "123hljslfsjdfljk" > ./file.txt
      
       - run: git --version
       
